# smallhold

./: .dockerignore  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  DEPLOY.md  Dockerfile  PRFAQ.md  README.md  SESSION_STATE.md  compose.yaml  mastodon-rust-minimal-spec.md
.beads/: .gitignore  .local_version  config_kv.json  counter.json  last-touched  metadata.json
.beads/events/: smallhold-06f.jsonl  smallhold-085.jsonl  smallhold-086.jsonl  smallhold-0bwa.jsonl  smallhold-0c7l.jsonl  smallhold-0dn1.jsonl  smallhold-0e9u.jsonl  smallhold-0ix.jsonl  smallhold-0m86.1.jsonl  smallhold-0m86.2.jsonl  smallhold-0m86.jsonl  smallhold-0op.jsonl  smallhold-0pk.jsonl  smallhold-10qj.jsonl  smallhold-149.jsonl  smallhold-18kg.jsonl  smallhold-1ill.jsonl  smallhold-1jo.jsonl  smallhold-1jvo.jsonl  smallhold-1ps.jsonl  smallhold-1ub.jsonl  smallhold-1yl.jsonl  smallhold-22bi.jsonl  smallhold-22p.jsonl  smallhold-23e.jsonl  smallhold-23j.jsonl  smallhold-2dpo.jsonl  smallhold-2dq.jsonl  smallhold-2e0y.jsonl  smallhold-2eb.jsonl  smallhold-2h7.jsonl  smallhold-2io.jsonl  smallhold-2m5.jsonl  smallhold-2o6.jsonl  smallhold-2oo1.1.jsonl  smallhold-2oo1.2.jsonl  smallhold-2oo1.3.jsonl  smallhold-2oo1.4.jsonl  smallhold-2oo1.5.jsonl  (+515 more)
docs/: deployment.md  design-key-storage.md
src/: activitypub.rs  api.rs  bookwyrm_api.rs  cards.rs  cli.rs  config.rs  db.rs  db_extras.rs  delivery.rs  did.rs  discovery.rs  error.rs  federation.rs  feeds.rs  funkwhale_api.rs  id.rs  import.rs  inbox.rs  interactions.rs  lemmy_api.rs  lib.rs  main.rs  media.rs  misskey_api.rs  peertube_api.rs  pixelfed_api.rs  posting.rs  push.rs  search.rs  server.rs  streaming.rs  theme.rs  webauthn.rs  writefreely_api.rs
(+560 files in other folders)
