[package]
name = "smallhold"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
ammonia = "4"
argon2 = "0.5"
axum = { version = "0.8", features = ["tokio", "multipart", "ws"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22"
blurhash = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
flate2 = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.22"
tar = "0.4"
tempfile = "3"
url = "2"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa", "pem"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"

[dev-dependencies]
axum-test = "16"

[profile.release]
lto = true
strip = true
